# fp-university-guide

./: .env.dev.example  .gitignore  README.md  app.py  requirements.txt  setup.cfg
app/: __init__.py  app.py
app/controllers/: auth.py  contact_us.py  home.py  university.py
app/models/: blog.py  contact_item.py  news.py  university.py  user.py
app/static/js/: app.js
app/templates/components/: cards.html  footer.html  form.html  navs.html
app/templates/layouts/: base.html
app/templates/views/: contact-us.html  hello.html  login.html  scholarships.html  signup.html  universities.html
app/utilities/: auth.py  seeding.py
factories/: university.py
migrations/versions/: 0ddd5c436ce0_link_scholarship_to_uni_instead_of_.py  3c08dce4336b_add_address.py  570edac5669c_initial_migration.py  65658f0a0f5b_collect_contact_us_data.py  8aa079a5142c_initial_migration.py  b02a2e1596fd_add_blog_and_news.py  ef2006036e5c_add_about_ot_uni.py
models/: user.py
seeds/: blog.py  news.py  university.py  user.py
static/css/: styles.css
templates/components/: buttons.html  cards.html  containers.html  form.html  headers.html  navs.html
templates/layouts/: base.html
templates/views/: hello.html  login.html  signup.html
tests/: conftest.py
tests/e2e/: test_ui.py
tests/feature/: test_auth.py
tests/integration/: test_int_contact_us.py  test_search.py
tests/rest-e2e/: test_auth.py  test_middleware.py  test_registration.py
tests/unit/: test_app.py  test_auth.py  test_contact_us.py  test_registration.py  test_unit_auth.py  test_university.py
(+29 files in other folders)
