[metadata]
name = University Guide
version = 1.0.0
url = https://university-guide.herokuapp.com/
maintainer = Bahy
maintainer_email = bahy.ali@code.berlin
description = University Guide test project.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app